[metadata]
name = kolla
summary = Kolla OpenStack Deployment
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/kolla/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    kolla
data_files =
    share/kolla/docker = docker/*
    share/kolla/tools = tools/validate-docker-execute.sh
    share/kolla/tools = tools/cleanup-images
    share/kolla/tools = tools/start-registry
    share/kolla/doc = doc/*
    share/kolla/etc_examples = etc/*
    share/kolla = setup.cfg

[entry_points]
console_scripts =
    kolla-build = kolla.cmd.build:main
oslo.config.opts =
    kolla = kolla.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
