[metadata]
name = kolla
summary = Kolla OpenStack Deployment
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/kolla/latest/
python_requires = >=3.10
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[files]
packages =
    kolla
data_files =
    share/kolla/docker = docker/*
    share/kolla/tools = tools/validate-docker-execute.sh
    share/kolla/tools = tools/cleanup-images
    share/kolla/tools = tools/start-registry
    share/kolla/doc = doc/*
    share/kolla/etc_examples = etc/*
    share/kolla/contrib = contrib/*
    share/kolla = setup.cfg

[entry_points]
console_scripts =
    kolla-build = kolla.cmd.build:main
oslo.config.opts =
    kolla = kolla.opts:list_opts
